# radial

./: CMakeLists.txt  LICENSE  README.md
examples/: CMakeLists.txt  adapt_projection_2D.cc  uniform_projection_2D.cc
include/: recovery_common.h  recovery_common_impl.h  solution_recovery.h  solution_recovery_impl.h
src/: CMakeLists.txt  recovery_common.cc  solution_recovery.cc
tests/: CMakeLists.txt  min_points_2D.cc  min_points_3D.cc  patch_basis_2D.cc  patch_basis_2D.output  patch_basis_3D.cc  patch_bounding_box_2D.cc  patch_bounding_box_2D.output  patch_bounding_box_3D.cc  patch_bounding_box_3D.output  ppr_interpolant.cc  ppr_interpolant.output  ppr_interpolant_2D.cc  ppr_interpolant_2D.output  ppr_interpolant_3D.cc  vertex_to_cell_2D.cc  vertex_to_cell_2D.output  vertex_to_cell_3D.cc  vertex_to_cell_3D.output
